prevented calculator input from wrapping

--- a/css/styles.css
+++ b/css/styles.css
@@ -50,6 +50,7 @@ body {
 	display: flex;
 	justify-content: flex-end;
 	align-items: center;
+	white-space: nowrap;
 	overflow: hidden;
 }
 
